[package]
name = "lau-fibonacci-growth"
version = "0.1.0"
edition = "2021"
description = "Fibonacci growth patterns for agent capability development"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-fibonacci-growth"

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.150"
